styles.css
html {box-sizing:border-box;}
*, *:before, *:after {box-sizing:inherit;}

@font-face {
    font-family: weatherStar;
    src: url(./Fonts/Star4000/Star4000.ttf);
}

@font-face {
    font-family: weatherStarSmall;
    src: url(./Fonts/Star4000/Star4000Small.ttf);
}

body {
	width: 1200px;
	margin: 0 auto;
	background-position: center;
	background-color: rgb(28, 16, 81);
	font-family: 'weatherStar', monospace;
	text-shadow:
		4px 4px #000;
}



.subBar {
	margin-top: 50px;
	width: 900px;
	height: 125px;
	background: linear-gradient(rgb(180, 98, 20), rgb(49, 22, 73));
	position: absolute;	
}


.outer-mask {
    position: absolute;
    top: 50px;
    width: 880px;
    height: 112px;
    overflow: hidden;
}
.inner-mask {
    position: absolute;
    left: -50px;
    top: 0px;
    width: 880px;
    height: 112px;
    overflow: hidden;
    -webkit-transform: skew(-40deg, 0deg);
        -ms-transform: skew(-40deg, 0deg);
         -o-transform: skew(-40deg, 0deg);
            transform: skew(-40deg, 0deg);
}
.content {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 880px;
    height: 112px;
    background-color: rgb(180, 98, 20);
    background-image: -webkit-linear-gradient(top, rgb(180, 98, 20), rgb(49, 22, 73));
    background-image:    -moz-linear-gradient(top, rgb(180, 98, 20), rgb(49, 22, 73));
    background-image:     -ms-linear-gradient(top, rgb(180, 98, 20), rgb(49, 22, 73));
    background-image:      -o-linear-gradient(top, rgb(180, 98, 20), rgb(49, 22, 73));
    background-image:         linear-gradient(top, rgb(180, 98, 20), rgb(49, 22, 73));
}


/*.subBar {
	margin-top: 50px;
	border-top: 160px solid rgb(196, 89, 1);
    border-right: 150px solid transparent;
	border-left: 0 solid transparent;
	border-image-source: linear-gradient(rgb(49, 22, 73), rgb(180, 98, 20));
	border-image-slice: 160;
	background: linear-gradient(rgb(49, 22, 73), rgb(180, 98, 20));
	height: 0;
	width: 950px;
}*/

.infoBar {
	width: 1000px;
	height: 150px;
	margin-left: 80px;
	display: flex;
	justify-content: space-around;
	position: relative;
	padding-top: 50px;
}


#logo {
	border-radius: 20px;
	box-shadow: 4px 7px;
	margin-top: -25px;
}

.headline {
	color: rgb(223, 180, 39);
	font-size: 50px;
	margin-left: -100px;
}

#date, #time {
	color: white;
	font-style: bold;
	font-size: 50px;
	font-family: 'weatherStarSmall', monospace;
	text-align: center;
	justify-content: center;
	margin: 0;
}

main {
	width: 1200px;
	height: 600px;
	background: linear-gradient(rgb(49, 22, 73), rgb(180, 98, 20)); 
}

.mainBox {
	width: 980px;
	height: 600px;
	margin: 0 auto;
	margin-top: 12px;
	background-color: rgb(36, 43, 90);
	border: 20px solid rgb(83, 90, 125);
	border-radius: 6px;
	border-image-source: radial-gradient(rgb(83, 90, 125), rgb(36, 43, 90)); /*not quite right here*/
	border-image-slice: 20;
	display: flex;
	color: rgb(205,	210, 221);
}

.mainInfo {
	width: 490px;
	text-align: center;
}

.subInfo {
	width: 490px;
}

h1 {
	font-size: 72px;
	margin: 0;

}

h2 {
	font-size: 64px;
	margin: 5px;
}

h3 {
	font-size: 44px;
	margin: 20px;
}


footer {
	width: 1200px;
	height: 200px;
	margin-top: 2px;
	background-color: rgb(36, 43, 90);
	border-top: 2px solid gray;
	color: white;
	padding-left: 175px;

}

.gif {
	width: 250px;
}

#cityName {
	color: rgb(223, 180, 39);
	font-size: 50px;
	margin-left: -25px;

